function to change svg text on the map

--- a/ironhack_01_project_nba_risk/styles.css
+++ b/ironhack_01_project_nba_risk/styles.css
@@ -29,6 +29,15 @@ body {
   font-family: fantasy;
 }
 
+text {
+  font: italic 15px sans-serif;
+  fill: black;
+}
+
+.small {
+  font: italic 13px sans-serif;
+}
+
 h1 {
   color: var(--warriors-gold);
   font-size: 4rem;
