retrieve state info in test.js and starting svg text

--- a/ironhack_01_project_nba_risk/styles.css
+++ b/ironhack_01_project_nba_risk/styles.css
@@ -30,8 +30,9 @@ body {
 }
 
 text {
-  font: italic 15px sans-serif;
+  font: italic 1rem sans-serif;
   fill: black;
+  stroke-width: 0.1;
 }
 
 .small {
@@ -52,6 +53,7 @@ svg {
   background-image: var(--nba-background-image);
   background-position: center;
   background-size: 300px;
+  margin-bottom: 100px;
 }
 
 .country {
