--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
   text-align: center;
 }
 
+#gameover-img {
+  width: 90vw;
+}
+
 body {
   background-color: #000000;
   font-family: fantasy;
@@ -137,7 +141,7 @@ svg {
 text {
   font: italic 1rem sans-serif;
   fill: white;
-  stroke-width: 0.2;
+  stroke-width: 0;
 }
 
 image {
