--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,6 @@
   text-align: center;
 }
 
-#gameover-img {
-  width: 90vw;
-}
-
 body {
   background-color: #000000;
   font-family: fantasy;
@@ -41,7 +37,103 @@ h1 img {
   width: 3rem;
 }
 
+/* Start Menu Styling */
+
+.homebackground {
+  /* background-image: url(./Images/Player_Images/start2_curryvsirving.jpg); */
+  background-image: url(./Images/Player_Images/start2_curryvsirving.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 120vh;
+}
+
+.homeheading {
+  font-size: 3rem;
+  color: white;
+  font-weight: lighter;
+  text-shadow: black 4px 1px 2px;
+}
+
+.control-start {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 10rem 0;
+  flex-direction: column;
+}
+
+.btn-start {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20vw;
+  height: 50px;
+  font-weight: bold;
+  font-size: 2rem;
+  font-family: fantasy;
+  outline: 1px solid black;
+  background-color: aqua;
+  text-shadow: black 4px 3px 2px;
+  color: yellow;
+  margin: 20px;
+}
+
+.btn-start a {
+  font-weight: bold;
+  font-size: 2rem;
+  font-family: fantasy;
+  background-color: aqua;
+  text-shadow: black 4px 3px 2px;
+  color: yellow;
+  text-decoration: none;
+}
+
+.btn-start:hover {
+  outline: 2px solid gold;
+  cursor: pointer;
+}
+
+.info {
+  position: absolute;
+  top: 35rem;
+  font-size: 1rem;
+  color: black;
+  font-weight: lighter;
+  text-shadow: aqua 2px 1px 2px;
+}
+
+/* Result Box Styling */
+
+.display-result-start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 4rem;
+  flex-direction: column;
+}
+
+.inner-result-start {
+  display: flex;
+  width: 60vw;
+  height: 12rem;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+/* End Start Menu Styling */
+
 /* Team Styling / Team Colorways */
+
+/* Gameover Image Size */
+
+#gameover-img {
+  width: 90vw;
+}
 
 /* Golden State Warriors Colorway */
 
